crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_a_u0008_gt.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<a\b>\"####)"
---
[
    Token {
        data: "a\u{8}",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "a\u{8}",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
